--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-368.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-150.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-230.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-708.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-972.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-158.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-385.1KB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇨🇳 中国-345.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-1.13MB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-827.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇫🇷 法国-1.14MB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-365.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-203.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-230.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-365.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-230.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-365.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-230.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-365.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-230.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-365.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-230.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-365.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-230.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-365.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-368.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-230.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-385.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-365.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
