--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.61MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-555.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-9.57MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-10.18MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-993.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.38MB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-406.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-827.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇫🇷 法国-1.14MB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
