--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-993.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.38MB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-406.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.53MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1023.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-222.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-5.67MB/s(Youtube:不良林), server: crj749919467.n-tmd.com, port: 31502, type: vmess, uuid: 9b4f0258-1127-41d9-f30a-469e80737327, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇨🇳 中国-184.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.84MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-827.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.14MB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-203.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-301.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-993.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-406.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
       - 🇫🇷 法国-827.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
